fix bug showing all in a page after routing

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,12 @@
   color: white;
 }
 
+.header a{
+  color: white;
+  text-decoration: none;
+  background-color: transparent;
+}
+
 .card {
   font-family: 'Marvel', sans-serif;
   border: none;
